--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,21 @@
 .navbar-logo-img {
     width: 158px;
     height: 58px;
+    cursor: pointer;
+    margin-right: 20px;
 }
 .flexgrow {
     flex-grow: 1;
 }
+.nav-btn .MuiButton-root {
+    transition: background-color 0.3s, color 0.3s;
+}
+/* Hover effect for buttons */
+.nav-btn .MuiButton-root:hover {
+    background-color: #e1f5fe; /* Change this to your desired hover color */
+    color: #0a0808; /* Change this to your desired text color on hover */
+}
+.nav-btn .MuiButton-root.active {
+    background-color: #e1f5fe; /* Change this to your desired active color */
+    color: #0a0808; /* Change this to your desired text color when active */
+  }
